Browse page header elements now perfectly aligned, wooo. Starting to fix issues with autocomplete menu.

--- a/public/assets/css/_project-sass/_project-Main.scss
+++ b/public/assets/css/_project-sass/_project-Main.scss
@@ -784,28 +784,35 @@ a.tag:hover {
   max-height: 800px;
   overflow-y: visible;
 }
-
 .tt-dropdown-menu {
   padding: 0px 10px 0px 10px;
   background: #FFFFFF;
+  cursor: pointer;
 }
-.browse-page .select-Container {
-  overflow: none!important;
+.interior .header-Outro.browse-page {
+  overflow: visible;
+}
+.interior .header-Outro.browse-page .select-Container {
+  overflow: none;
   padding: 2px 4px;
   width: 40%;
 }
 .browse-page .input-Area {
   width: 100%;
-  padding: 5px 5px;
+  padding: 4px 5px;
+}
+.header-Outro .twitter-typeahead {
+  top: -2px;
+  color: #000;
 }
 .header-Outro .btn-Action {
   margin: 0 0 0 10px;
 }
 .browse-page .text-Label {
   float: left;
-  margin-right: 5px;
+  margin-right: 8px;
   font-weight: bold;
-  line-height:31px;
+  line-height: 31px;
 }
 .browse-page h1 {
   margin-top: 0;
